[gd_scene load_steps=3 format=3 uid="uid://b4vv5qd6vdn38"]

[ext_resource type="Script" uid="uid://bs147eebq7m4h" path="res://scripts/lobby.gd" id="1_5gu6x"]
[ext_resource type="Script" uid="uid://bq5ingucc5ayb" path="res://scripts/web_socket_client.gd" id="2_q60fs"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5gu6x")

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource("2_q60fs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 39.0
offset_right = 116.0
offset_bottom = 74.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Send Msg"

[node name="MatchmakingStatus" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = 1152.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
bbcode_enabled = true
text = "[center]Welcome[/center]"

[node name="MatchesContainer" type="Panel" parent="."]
layout_mode = 0
offset_left = 619.0
offset_top = 76.0
offset_right = 1049.0
offset_bottom = 546.0

[node name="MatchStatus" type="RichTextLabel" parent="MatchesContainer"]
layout_mode = 0
offset_right = 426.0
offset_bottom = 68.0
bbcode_enabled = true
text = "Select a Match"

[node name="AvailableMatches" type="VBoxContainer" parent="MatchesContainer"]
layout_mode = 0
offset_left = 40.0
offset_top = 55.0
offset_right = 425.0
offset_bottom = 470.0

[node name="PlayerStats" type="Panel" parent="MatchesContainer"]
layout_mode = 0
offset_left = -449.0
offset_top = 65.0
offset_right = -283.0
offset_bottom = 335.0

[node name="UserInfo" type="Panel" parent="MatchesContainer"]
layout_mode = 0
offset_left = -451.0
offset_top = 343.0
offset_right = -281.0
offset_bottom = 381.0

[node name="Username" type="RichTextLabel" parent="MatchesContainer/UserInfo"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 167.0
offset_bottom = 38.0
bbcode_enabled = true
text = "[center]username[/center]"

[node name="LobbyContainer" type="Panel" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 114.0
offset_right = 399.0
offset_bottom = 513.0

[node name="MapInfo" type="RichTextLabel" parent="LobbyContainer"]
layout_mode = 0
offset_left = -3.0
offset_top = -35.0
offset_right = 305.0
offset_bottom = -1.0

[node name="Teams" type="Panel" parent="LobbyContainer"]
layout_mode = 0
offset_left = 522.0
offset_top = -37.0
offset_right = 954.0
offset_bottom = 432.0

[node name="Team1" type="RichTextLabel" parent="LobbyContainer/Teams"]
layout_mode = 0
offset_left = 9.0
offset_top = 49.0
offset_right = 420.0
offset_bottom = 83.0
text = "Red Team
"

[node name="RedTeam" type="VBoxContainer" parent="LobbyContainer/Teams"]
layout_mode = 0
offset_left = 12.0
offset_top = 79.0
offset_right = 409.0
offset_bottom = 216.0

[node name="Team2" type="RichTextLabel" parent="LobbyContainer/Teams"]
layout_mode = 0
offset_left = 11.0
offset_top = 220.0
offset_right = 403.0
offset_bottom = 260.0
text = "Blue Team"

[node name="BlueTeam" type="VBoxContainer" parent="LobbyContainer/Teams"]
layout_mode = 0
offset_left = 10.0
offset_top = 252.0
offset_right = 425.0
offset_bottom = 457.0

[connection signal="connected_to_server" from="WebSocketClient" to="." method="_on_websocket_client_connected_to_server"]
[connection signal="connection_closed" from="WebSocketClient" to="." method="_on_websocket_client_connection_closed"]
[connection signal="message_received" from="WebSocketClient" to="." method="_on_websocket_message_received"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_send_test_message_pressed"]
